Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4012

GSS upcall routine fails due to removed generic cache routines in Linux kernels >= 3.4.X

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.6.0
    • Lustre 2.5.0
    • Debian Wheezy with Lustre Patched Kernel 3.6.11
    • 3
    • 10752

      With Linux kernel version >= 3.4.X the generic cache registering
      routines cache_register(), cache_unregister() are removed.
      This effects the GSS upcall routines for the Kerberos
      support in Lustre. Before (Linux kernel <= 3.2.X) the
      generic routines were coded as:

      int cache_register(struct cache_detail *cd)
      {
              return cache_register_net(cd, &init_net);
      }
      void cache_unregister(struct cache_detail *cd)
      {
              cache_unregister_net(cd, &init_net);
      }
      

      To keep compatibility with former kernel versions,
      cache_register_net() and cache_unregister_net() can
      be applied instead, rather than the old and
      removed cache_register() and cache_unregister().

      I provide a patch to fix it.

            utopiabound Nathaniel Clark
            thomas.stibor Thomas Stibor
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: