LU-4012 gss: upcall fails due to removed generic cache calls

With Linux kernel version >= 3.4.X the generic cache registering
routines cache_register(), cache_unregister() are removed.
This effects the GSS upcall routines for the Kerberos
support in Lustre. Before (Linux kernel <= 3.2.X) the
generic routines were coded as:
int cache_register(struct cache_detail *cd)
{
        return cache_register_net(cd, &init_net);
}
void cache_unregister(struct cache_detail *cd)
{
        cache_unregister_net(cd, &init_net);
}
To keep compatibility with former kernel versions,
cache_register_net() and cache_unregister_net() can
be applied instead, rather than the old and
removed cache_register() and cache_unregister().

Signed-off-by: Thomas Stibor <thomas@stibor.net>
Change-Id: I3eb012a1883c463ecafe3646e7e706ab96d91c5c